--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -35,6 +35,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        // Please add your API Key to the local.properties file
         buildConfigField "String", "NASA_API_KEY", "\"" + getApiKey("nasa") + "\""
     }
     buildTypes {
